Add the header of the odin landing page project

--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
             </div>
         </div>
     </nav>
+    <div class="header-container">
         <div class="header-content">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
-            <img src="">
+            <h1 class="hero-main-text">This website is awesome</h1>
+            <p class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <a href="https://www.google.be/?hl=nl" target="_blank"><button class="sign-up">Sign up</button></a>
+            </div>
+            <div class="header-picture">
+            <img class="forest-scenery" src="images/forest-scenery.jpg" alt="A forest scenery">
+            </div>
         </div>
-        </div>
+            </div>
+    </div>
     </header>
     <article>
         <div class="information-article">
