Add random information section

--- a/index.html
+++ b/index.html
@@ -32,12 +32,22 @@
     </div>
     </header>
     <article>
-        <div class="information-article">
-            <h2>Some random information.</h2>
-            <img class="information-article-picture"><span>This is some subtext under an illustration or an image</span>
-            <img class="information-article-picture"><span>This is some subtext under an illustration or an image</span>
-            <img class="information-article-picture"><span>This is some subtext under an illustration or an image</span>
-            <img class="information-article-picture"><span>This is some subtext under an illustration or an image</span>
+        <div class="random-information">
+            <div class="random-title">
+            <h2 class="random-text">Some random information.</h2>
+            </div>
+            <div class="random-picture">
+                <div class="random container">
+            <img class="random-information-picture" src="images/barn.jpg" alt="A image of a barn"><div class="random-subtext">This is some subtext under an illustration or an image</div>
+                </div>
+                <div class="random container">
+                <img class="random-information-picture" src="images/bird.jpg" alt="A picture of a bird"><div class="random-subtext">This is some subtext under an illustration or an image</div></div>
+                <div class="random container">
+            <img class="random-information-picture" src="images/indoor-plant.jpg" alt="An indoor plant"><div class="random-subtext">This is some subtext under an illustration or an image</div></div>
+            <div class="random container">
+            <img class="random-information-picture" src="images/married-couple.jpg" alt="A married couple"><div class="random-subtext">This is some subtext under an illustration or an image</div></div>
+        </div>    
+        </div>
         </div>
     </article>
     <section>
