--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     </article>
     <section>
         <div class="section-quote">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <span>-Thor, God of Thunder</span>
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         </div>
+            <span class="quoteAuthor">-Thor, God of Thunder</span>
     </section>
     <article>
         <div class="call-to-action">
