Add call to action section

--- a/index.html
+++ b/index.html
@@ -8,59 +8,66 @@
 <body>
     <header>
         <div class="header">
-    <nav>
-        <div class="nav-bar">
-            <span class="header-logo">Header Logo</span>
-            <div  class="nav-link">
-            <a class="header-link" href="https://www.google.be/?hl=nl" target="_blank">header link one</a>
-            <a class="header-link" href="https://www.facebook.com/?locale=nl_FR" target="_blank">header link two</a>
-            <a class="header-link" href="https://twitter.com/?lang=nl" target="_blank">header link three</a>
-            </div>
-        </div>
-    </nav>
-    <div class="header-container">
-        <div class="header-content">
-            <h1 class="hero-main-text">This website is awesome</h1>
-            <p class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <a href="https://www.google.be/?hl=nl" target="_blank"><button class="sign-up">Sign up</button></a>
+            <nav>
+                <div class="nav-bar">
+                    <span class="header-logo">Header Logo</span>
+                    <div  class="nav-link">
+                        <a class="header-link" href="https://www.google.be/?hl=nl" target="_blank">header link one</a>
+                        <a class="header-link" href="https://www.facebook.com/?locale=nl_FR" target="_blank">header link two</a>
+                        <a class="header-link" href="https://twitter.com/?lang=nl" target="_blank">header link three</a>
+                    </div>
+                </div>
+            </nav>
+        <div class="header-container">
+            <div class="header-content">
+                <h1 class="hero-main-text">This website is awesome</h1>
+                <p class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <a href="https://www.google.be/?hl=nl" target="_blank"><button class="sign-up">Sign up</button></a>
             </div>
             <div class="header-picture">
-            <img class="forest-scenery" src="images/forest-scenery.jpg" alt="A forest scenery">
+                <img class="forest-scenery" src="images/forest-scenery.jpg" alt="A forest scenery">
             </div>
         </div>
-            </div>
-    </div>
+        </div>
     </header>
     <article>
         <div class="random-information">
             <div class="random-title">
-            <h2 class="random-text">Some random information.</h2>
+                <h2 class="random-text">Some random information.</h2>
             </div>
             <div class="random-picture">
                 <div class="random container">
-            <img class="random-information-picture" src="images/barn.jpg" alt="A image of a barn"><div class="random-subtext">This is some subtext under an illustration or an image</div>
+                    <img class="random-information-picture" src="images/barn.jpg" alt="A image of a barn"><div class="random-subtext">This is some subtext under an illustration or an image</div>
                 </div>
                 <div class="random container">
-                <img class="random-information-picture" src="images/bird.jpg" alt="A picture of a bird"><div class="random-subtext">This is some subtext under an illustration or an image</div></div>
+                    <img class="random-information-picture" src="images/bird.jpg" alt="A picture of a bird"><div class="random-subtext">This is some subtext under an illustration or an image</div>
+                </div>
                 <div class="random container">
-            <img class="random-information-picture" src="images/indoor-plant.jpg" alt="An indoor plant"><div class="random-subtext">This is some subtext under an illustration or an image</div></div>
-            <div class="random container">
-            <img class="random-information-picture" src="images/married-couple.jpg" alt="A married couple"><div class="random-subtext">This is some subtext under an illustration or an image</div></div>
-        </div>    
-        </div>
+                    <img class="random-information-picture" src="images/indoor-plant.jpg" alt="An indoor plant"><div class="random-subtext">This is some subtext under an illustration or an image</div>
+                </div>
+                <div class="random container">
+                    <img class="random-information-picture" src="images/married-couple.jpg" alt="A married couple"><div class="random-subtext">This is some subtext under an illustration or an image</div>
+                </div>
+            </div>    
         </div>
     </article>
     <section>
         <div class="section-quote">
             <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         </div>
-            <span class="quoteAuthor">-Thor, God of Thunder</span>
+        <span class="quoteAuthor">-Thor, God of Thunder</span>
     </section>
     <article>
-        <div class="call-to-action">
-            <span>Call to action! It's time!</span>
-            <span>Sign up for our product by clicking that button right over there!</span>
-            <button>Sign up</button>
+        <div class="call-to-action-container">
+            <div class="call-to-action-little-box">
+                <div class="call-to-action-text">
+                    <span class="call-action-big-text">Call to action! It's time!</span>
+                    <span class="call-action-little-text">Sign up for our product by clicking that button right over there!</span>
+                </div>
+                <div class="call-to-action-button">
+                    <buttons class="sign-up-call-action">Sign up</button>
+                </div>
+            </div>
         </div>
     </article>
     <footer>
