Add footer and anchor for call to action sign up button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <div class="header-content">
                 <h1 class="hero-main-text">This website is awesome</h1>
                 <p class="header-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <a href="https://www.google.be/?hl=nl" target="_blank"><button class="sign-up">Sign up</button></a>
+                <a href="https://www.google.be/?hl=nl" target="_blank">
+                    <button class="sign-up">Sign up</button>
+                </a>
             </div>
             <div class="header-picture">
                 <img class="forest-scenery" src="images/forest-scenery.jpg" alt="A forest scenery">
@@ -37,16 +39,28 @@
             </div>
             <div class="random-picture">
                 <div class="random container">
-                    <img class="random-information-picture" src="images/barn.jpg" alt="A image of a barn"><div class="random-subtext">This is some subtext under an illustration or an image</div>
+                    <img class="random-information-picture" src="images/barn.jpg" alt="A image of a barn">
+                    <div class="random-subtext">
+                        This is some subtext under an illustration or an image
+                    </div>
                 </div>
                 <div class="random container">
-                    <img class="random-information-picture" src="images/bird.jpg" alt="A picture of a bird"><div class="random-subtext">This is some subtext under an illustration or an image</div>
+                    <img class="random-information-picture" src="images/bird.jpg" alt="A picture of a bird">
+                    <div class="random-subtext">
+                        This is some subtext under an illustration or an image
+                    </div>
                 </div>
                 <div class="random container">
-                    <img class="random-information-picture" src="images/indoor-plant.jpg" alt="An indoor plant"><div class="random-subtext">This is some subtext under an illustration or an image</div>
+                    <img class="random-information-picture" src="images/indoor-plant.jpg" alt="An indoor plant">
+                    <div class="random-subtext">
+                        This is some subtext under an illustration or an image
+                    </div>
                 </div>
                 <div class="random container">
-                    <img class="random-information-picture" src="images/married-couple.jpg" alt="A married couple"><div class="random-subtext">This is some subtext under an illustration or an image</div>
+                    <img class="random-information-picture" src="images/married-couple.jpg" alt="A married couple">
+                    <div class="random-subtext">
+                        This is some subtext under an illustration or an image
+                    </div>
                 </div>
             </div>    
         </div>
@@ -62,19 +76,22 @@
             <div class="call-to-action-little-box">
                 <div class="call-to-action-text">
                     <span class="call-action-big-text">Call to action! It's time!</span>
-                    <span class="call-action-little-text">Sign up for our product by clicking that button right over there!</span>
+                    <span class="call-action-little-text">Sign up for our product by clicking that button right over there!
+                    </span>
                 </div>
                 <div class="call-to-action-button">
-                    <buttons class="sign-up-call-action">Sign up</button>
+                    <a href="https://www.google.be/?hl=nl" target="_blank" class="sign-up-link">
+                        <buttons class="sign-up-call-action">Sign up</button>
+                    </a>
                 </div>
             </div>
         </div>
     </article>
     <footer>
         <div class="footer">
-            <span>Copyright</span>
-            <span> ©</span>
-            <span>The Odin project 2021</span>
+            <span class="footer-text">Copyright</span>
+            <span class="footer-text"> ©</span>
+            <span class="footer-text">The Odin project 2021</span>
         </div>
     </footer>
 </body>
